# my-awesome-project

./: agente_calendar.py  app.py  app_pdf.py  asistentepdf.py  calendar_agent.py  credentials.json  def_grok.py  def_weather.py  embendigs.py  grok_chat.py  groq_weather.py  pyproject.toml  rag.py  structured.py  system_prompt.txt  token.json  weather.py
agente_multi/: agent.py  main.py
agente_multi/tools/: search.py  time_tool.py  weather.py
pdf_assistant/: app.py  llm.py  pdf_processor.py  requiermets.txt  vector_store.py
