[project]
name = "my-awesome-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
