[project]
name = "my-awesome-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
]
